# rust-grpc-experiments-common

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  build-client-container.sh  build-server-container.sh
common/: Cargo.toml  build.rs
common/proto/: Common.proto  CommunicationService.proto  SessionManagementService.proto  SysSyncService.proto  UpdatesTrackerService.proto  say.proto
common/src/: hello.rs
