[package]
name = "common"
version = "0.1.0"
authors = ["ibednyakov <ivan.bednyakov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version="0.4.0",features = ["tls", "transport"]}
tokio = {version="1.2.0",features = ["macros", "rt-multi-thread"]}
prost = "0.7.0"
tokio-stream = "0.1.3"
tokio-channel = "0.1.0"
futures = "0.3.12"

[build-dependencies]
tonic-build = "0.4.0"

[lib]
name = "common"
path = "src/hello.rs"